# qoqo_qasm

./: .buildinfo  .flake8  .gitignore  .mypy.ini  CHANGELOG.md  CONTRIBUTE.md  Cargo.toml  README.md  deny.toml  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  requirements.txt  search.html  searchindex.js  setup.py
.doctrees/: environment.pickle  index.doctree  modules.doctree
.github/: dependabot.yml
.github/workflows/: build_and_deploy.yml  ci_tests.yml  hqs-build-deploy-pure-python.yml  hqs-build-deploy-rust-pyo3.yml  hqs-build-deploy-sphinx-doc-rust-pyo3.yml  hqs-ci-test-pure-python.yml  hqs-ci-test-rust-pyo3.yml  manual-qoqo-qasm-upload-cratesio.yml  manual-qoqo-qasm-upload-pypi.yml  manual-test.yml
_modules/: index.html
_static/: documentation_options.js
doc/: conf.py
qoqo-qiskit/: setup.py
qoqo-qiskit/qoqo-qiskit/: __init__.py
qoqo_qasm/: .flake8  Cargo.toml  README.md  __init__.py  __version__.py  build.rs  pyproject.toml  requirements.txt  setup.py
qoqo_qasm/backend/: qasm_backend.py
qoqo_qasm/doc/: conf.py  requirements.txt
qoqo_qasm/docs/: conf.py  index.rst  modules.rst
qoqo_qasm/interface/: qasm_interface.py
qoqo_qasm/python_tests/: README.md  requirements.txt  test_qasm.py
qoqo_qasm/qoqo_qasm/: DEPENDENCIES  __init__.py  __version__.py
qoqo_qasm/qoqo_qasm/backend/: __init__.py  qasm_backend.py
qoqo_qasm/qoqo_qasm/interface/: __init__.py  qasm_interface.py
qoqo_qasm/src/: backend.rs  interface.rs  lib.rs  parser.rs
qoqo_qasm/tests/: gates.qasm  input.qasm  requirements.txt
qoqo_qasm/tests/acceptance/: test_acceptance.py
qoqo_qasm/tests/backend/: test_qasm_backend.py
qoqo_qasm/tests/integration/: backend.rs  interface.rs  main.rs  parser.rs
qoqo_qasm/tests/interface/: test_qasm_interface.py
qoqo_qiskit/: README.md  pyproject.toml  setup.py
qoqo_qiskit/docs/: Makefile  conf.py  index.rst  modules.rst  requirements.txt
qoqo_qiskit/qoqo-qiskit/: __init__.py  __version__.py  backend.py  conversion.py
qoqo_qiskit/qoqo_qiskit/: __init__.py  __version__.py  backend.py  conversion.py  interface.py
qoqo_qiskit/qoqo_qiskit/backend/: __init__.py  backend.py
qoqo_qiskit/qoqo_qiskit/interface/: __init__.py  interface.py
qoqo_qiskit/tests/: __init__.py  requirements.txt  test_backend.py  test_conversion.py  test_interface.py
qoqo_qiskit/tests/backend/: __init__.py  test_backend.py
qoqo_qiskit/tests/interface/: __init__.py  test_interface.py
roqoqo-qasm/: Cargo.toml  README.md
roqoqo-qasm/src/: backend.rs  interface.rs  lib.rs  parser.rs  variable_gatherer.rs
roqoqo-qasm/src/grammars/: qasm2_0.pest
roqoqo-qasm/tests/: comments.qasm  expressions_whitespaces.qasm  gate_defs.qasm  gates.qasm  include.qasm  incorrect_file.qasm  sqg.qasm  symbols.qasm  symbols_math_expr.qasm
roqoqo-qasm/tests/acceptance/: main.rs  test_acceptance.rs
roqoqo-qasm/tests/integration/: backend.rs  interface.rs  main.rs  mod.rs  parser.rs  variable_gatherer.rs
tests/backend/: test_qasm_backend.py
tests/interface/: test_qasm_interface.py
