[workspace]
members = ["roqoqo-qasm", "qoqo_qasm"]
resolver = "2"

[profile.release]
lto = true

[profile.bench]
lto = true

[patch.crates-io]
qoqo_calculator = { git = "https://github.com/dberthault/qoqo_calculator.git" }
qoqo_calculator_pyo3 = { git = "https://github.com/dberthault/qoqo_calculator.git" }
struqture = { git = "https://github.com/dberthault/struqture.git" }
struqture-py = { git = "https://github.com/dberthault/struqture.git" }
qoqo = { git = "https://github.com/dberthault/qoqo.git", branch = "Pyo3_0.12_update" }
roqoqo = { git = "https://github.com/dberthault/qoqo.git", branch = "Pyo3_0.12_update" }
roqoqo-derive = { git = "https://github.com/dberthault/qoqo.git", branch = "Pyo3_0.12_update" }
qoqo-quest = { git = "https://github.com/dberthault/qoqo-quest.git" }
roqoqo-quest = { git = "https://github.com/dberthault/qoqo-quest.git" }
