[package]
name = "qoqo_qasm"
version = "0.11.1"
authors = ["HQS Quantum Simulations <info@quantumsimulations.de>"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.56"
categories = ["science", "simulation"]
readme = "README.md"
homepage = "https://github.com/HQSquantumsimulations/qoqo_qasm"
repository = "https://github.com/HQSquantumsimulations/qoqo_qasm"
description = "Python interface of roqoqo_qasm by HQS Quantum Simulations"
include = [
    "src*",
    "build.rs",
    "qoqo_qasm",
    "LICENSE",
    "pyproject.toml",
    "README.md",
]

[lib]
name = "qoqo_qasm"
path = "src/lib.rs"
doctest = false
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qoqo = { version = "~1.14", default-features = false }
roqoqo = { version = "~1.14", features = ["serialize"] }
roqoqo-qasm = { version = "~0.11", path = "../roqoqo-qasm" }

[dependencies.pyo3]
version = "0.21"
features = ["num-complex"]

[dev-dependencies]
test-case = "3.0"
qoqo_calculator = "~1.2"
ndarray = "0.15"

[build-dependencies]
pyo3-build-config = "0.21"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
