[package]
name = "roqoqo-qasm"
version = "0.7.3"
authors = ["HQS Quantum Simulations <info@quantumsimulations.de>"]
license = "Apache-2.0"
edition = "2018"
categories = ["science", "simulation"]
readme = "README.md"
repository = "https://github.com/HQSquantumsimulations/qoqo_qasm"
description = "QASM interface for roqoqo rust quantum computing toolkit"
include = ["src*", "LICENSE", "README.md"]

[lib]
name = "roqoqo_qasm"
path = "src/lib.rs"
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roqoqo = { version = "1.4", features = ["serialize"] }
qoqo_calculator = { version = "1.1" }
ndarray = "0.15"

[dev-dependencies]
test-case = "3.0"
