[package]
name = "roqoqo-qasm"
version = "0.9.1"
authors = ["HQS Quantum Simulations <info@quantumsimulations.de>"]
license = "Apache-2.0"
edition = "2018"
categories = ["science", "simulation"]
readme = "README.md"
repository = "https://github.com/HQSquantumsimulations/qoqo_qasm"
description = "QASM interface for roqoqo Rust quantum computing toolkit by HQS Quantum Simulations"
include = ["src*", "LICENSE", "README.md"]

[lib]
name = "roqoqo_qasm"
path = "src/lib.rs"
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roqoqo = { version = "1.7", features = ["serialize"] }
qoqo_calculator = { version = "1.1" }
ndarray = "0.15"
pest = { version = "2.5", optional = true }
pest_derive = { version = "2.5", optional = true }
num-complex = "0.4"

[dev-dependencies]
test-case = "3.0"

[features]
unstable_qasm_import = ["pest", "pest_derive"]
