[package]
name = "roqoqo-qasm"
version = "0.11.1"
authors = ["HQS Quantum Simulations <info@quantumsimulations.de>"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.56"
categories = ["science", "simulation"]
readme = "README.md"
repository = "https://github.com/HQSquantumsimulations/qoqo_qasm"
description = "QASM interface for roqoqo Rust quantum computing toolkit by HQS Quantum Simulations"
include = ["src*", "LICENSE", "README.md"]

[lib]
name = "roqoqo_qasm"
path = "src/lib.rs"
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roqoqo = { version = "~1.14", features = [
    "serialize",
    "unstable_operation_definition",
] }
qoqo_calculator = { version = "~1.2" }
ndarray = "0.15"
pest = "2.5"
pest_derive = "2.5"
num-complex = "0.4"

[dev-dependencies]
test-case = "3.0"

[features]
